--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Pentru python:
-pip install Flask
-pip install ECPy
+click==8.0.3
+ECPy==1.2.5
+Flask==2.0.2
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+Werkzeug==2.0.2
